# best_drones

./: pyproject.toml
.github/workflows/: action_formatters.yml  main.yaml
src/apps/content/: urls.py
src/apps/inventory/: admin.py  apps.py  models.py  urls.py  views.py
src/apps/inventory/migrations/: 0001_initial.py
src/apps/inventory/templates/inventory/: catalog.html  product_page.html
src/config/: settings.py  urls.py
src/templates/: base.html
src/templates/account/: login.html
src/templates/includes/: header.html
