[tool.poetry]
name = "best-drones"
version = "0.1.0"
description = ""
authors = ["Viacheslav Volodin <volodin28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-allauth = "^0.58.2"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
djhtml = "^3.0.6"
pillow = "^10.1.0"
black = "^23.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
